dissipationtheory/dissipation.py and development/dissipation-theory--Study-6: I am able to reproduce quite well Lekkala 2013 Figure 7(b), parallel friction versus density for various values of mobility, using a Method I calculation and and a Method II calculation.  In dissipation.py I include both pure Python and numba-accelerated Python calculations.  In dissipation-theory--Study-6 I show that both calculations, for each method, give identical results.  The numba implemenation was challenging because I have nested classes and because I had to use a cmath.tanh workaround to the bug in the numba implementation of np.tanh.

--- a/development/dissipation-theory--Study-5.html
+++ b/development/dissipation-theory--Study-5.html
@@ -7487,7 +7487,7 @@ a.anchor-link {
 <li>Author: John A. Marohn</li>
 <li>Date: 2023-09-28</li>
 <li>Continued from: <code>dissipation-theory--Study-4.ipynb</code></li>
-<li>Continued to: ---</li>
+<li>Continued to: <code>dissipation-theory--Study-6.ipynb</code></li>
 <li>Look at ways to speed up the execution of the code in <code>dissipation-theory--Study-4.ipynb</code>.</li>
 </ul>
 </div>
