--- a/development/table-of-contents.html
+++ b/development/table-of-contents.html
@@ -36,7 +36,7 @@ pandoc table-of-contents.md -o table-of-contents.html --css pandoc.css -s --math
 <ul>
 <li>author: John A. Marohn</li>
 <li>created: 2024-10-29</li>
-<li>last updated: 2025-04-18</li>
+<li>last updated: 2025-05-02</li>
 </ul>
 <p>In the <code>dissipationtheory/development</code> folder there are a
 number of <em>studies</em> — Jupyter notebooks in which I experimented
@@ -416,6 +416,11 @@ code, which uses the new Loring formulas for BLDS frequency shift and
 non-contact friction. In this study I realize a nice, compact way to
 loop over material parameters and generate a composite figure with a
 legend; the method does not require much new code.</p></li>
+<li><p><strong>Study 42</strong> (<a
+href="dissipation-theory--Study-42.html">html</a>). Repeat the Study 39
+analysis using Loring’s new 2025-04-17 formulas implemented in the
+<code>dissipation6.py</code> code. Find that the BLDS frequency diverges
+at high modulation frequency.</p></li>
 </ul>
 </body>
 </html>
