dissipationtheory/dissipation8b.py and development/dissipation-theory--Study-45: New functions for calculation friction and frequency shift for a cantilever oscillating in the perpendicular geometry.  The frequency shift includes a static and a dynamic contribution.

--- a/development/table-of-contents.html
+++ b/development/table-of-contents.html
@@ -36,7 +36,7 @@ pandoc table-of-contents.md -o table-of-contents.html --css pandoc.css -s --math
 <ul>
 <li>author: John A. Marohn</li>
 <li>created: 2024-10-29</li>
-<li>last updated: 2025-06-09</li>
+<li>last updated: 2025-06-10</li>
 </ul>
 <p>In the <code>dissipationtheory/development</code> folder there are a
 number of <em>studies</em> — Jupyter notebooks in which I experimented
@@ -450,6 +450,17 @@ position for representative Type I and Type II samples. We show that
 <span class="math inline">\(K_0\)</span> computed over a “metallic” Type
 I and Type II sample gives the expected unitless image-charge
 potential.</p></li>
+<li><p><strong>Study 45</strong> (<a
+href="dissipation-theory--Study-45.html">html</a>). Test code for
+computing friction, <span class="math inline">\(\gamma\)</span>, and
+frequency shift, <span class="math inline">\(\Delta
+f_{\mathrm{stat}}\)</span> and <span class="math inline">\(\Delta
+f_{\mathrm{dyn}}\)</span>, for a cantilever oscillating in the
+perpendicular geometry over a thick Type I semiconductor sample. Import
+code from <code>dissipationtheory8a.py</code> and
+<code>dissipationtheory8b.py</code>. Develop a data class
+<code>ExptSweepConductivity</code> which computes and plots friction and
+frequency shift for varied conductivity and charge density.</p></li>
 </ul>
 </body>
 </html>
