development/table-of-contents: Correct typo.

--- a/development/table-of-contents.html
+++ b/development/table-of-contents.html
@@ -553,7 +553,7 @@ comparing the frequency shift measured over gold to that computed using
 (1) a sphere and (2) a sphere-plus-cone, both over a Type I “metallic”
 sample. Both models predict the size of the frequency shift at small
 tip-sample separation <span class="math inline">\(h\)</span> with a
-reasonable tipe radius and essentially no other free parameters. Model 2
+reasonable tip radius and essentially no other free parameters. Model 2
 does a better job than Model 1 at predicting the frequency shift at
 large <span class="math inline">\(h\)</span>. These computations are
 painfully slow. This is because I am modeling the gold substrate as a
